--- a/app/views/forms/housing/CBLadd-children.html
+++ b/app/views/forms/housing/CBLadd-children.html
@@ -121,7 +121,7 @@
 
       {{ govukInput({
         label: {
-          text: "Enter their Enter address including postcode"
+          text: "Enter their address. Including postcode if you know it."
         },
         id: "add1",
         name: "add1",
@@ -240,7 +240,7 @@
   
         {{ govukInput({
           label: {
-            text: "Enter their Enter address including postcode"
+            text: "Enter their address. Including postcode if you know it."
           },
           id: "add1",
           name: "add1",
@@ -361,7 +361,7 @@
   
         {{ govukInput({
           label: {
-            text: "Enter their Enter address including postcode"
+            text: "Enter their address. Including postcode if you know it."
           },
           id: "add1",
           name: "add1",
