--- a/app/views/forms/housing/CBLaddress.html
+++ b/app/views/forms/housing/CBLaddress.html
@@ -27,7 +27,7 @@
           value: data['postcode'],
           classes: "govuk-!-width-two-thirds",
           label: {
-            text: "Enter address including postcode"
+            text: "Enter address. Including postcode if you know it."
           }
         }) }}
 
