--- a/app/views/forms/housing/CBLcurrent-address.html
+++ b/app/views/forms/housing/CBLcurrent-address.html
@@ -70,9 +70,9 @@
               checked: checked ("type", "tenant")
             },
             {
-              value: "Lodger",
-              text: "Lodger",
-              checked: checked ("type", "Lodger")
+              value: "Living with parents",
+              text: "Living with parents",
+              checked: checked ("type", "Living with parents")
             },
             {
               value: "Owner",
