--- a/app/views/forms/housing/CBLdeclaration2-error.html
+++ b/app/views/forms/housing/CBLdeclaration2-error.html
@@ -17,9 +17,9 @@
         </h2>
         <p>Applies to you and anyone on the application:</p> 
         <ul class="govuk-list govuk-list--bullet">
-            <li>I’m eligible to apply for housing</li> 
-            <li>I’ll tell you if my circumstances change</li> 
-            <li>I’ll give true information on this application</li> 
+            <!--li>I’m eligible to apply for housing</li--> 
+            <li>I’ll tell you if my situation change</li> 
+            <li>I’ll give true information</li> 
             <li>I understand you’ll cancel my application if I give false information or withhold information</li>
             <li>I understand you may end my tenancy and evict me if you offer me a house based on false or withheld information</li> 
         </ul>
