--- a/app/views/forms/housing/CBLhouse-type.html
+++ b/app/views/forms/housing/CBLhouse-type.html
@@ -41,7 +41,7 @@
       },
       {
         value: "Cottage or house",
-        text: "Cottage or house"
+        text: "House or cottage"
       },
       {
         value: "Bungalow",
