--- a/app/views/forms/housing/CBLreasons.html
+++ b/app/views/forms/housing/CBLreasons.html
@@ -12,170 +12,113 @@
             Apply online for council housing <span class="UR-tag red">CHANGED</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-        <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset" aria-describedby="reason-hint">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                <h1 class="govuk-fieldset__heading">
-                    Why are you applying for housing?
-                </h1>
-                </legend>
-                <span id="reason-hint" class="govuk-hint govuk-!-margin-bottom-8">
-                Select any that apply.
-                </span>
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                    <h2 class="govuk-fieldset__heading">
-                        Need to leave my current home
-                    </h2>
-                    </legend>
-                <div class="govuk-checkboxes">
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-1" name="reason" type="checkbox" value="reason1">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-1">
-                            Homelessness or at risk of homelessness 
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-2" name="reason" type="checkbox" value="reason2">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-2">
-                        Leaving prison
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-3" name="reason" type="checkbox" value="reason3">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-3">
-                        Leaving hospital
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-4" name="reason" type="checkbox" value="reason4">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-4">
-                        Leaving HM Armed Forces
-                        </label>
-                    </div>
-             
-
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
-                        Personal difficulties
-                    </h2>
-                    </legend>
-          
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-5" name="reason" type="checkbox" value="reason5">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-1">
-                                Relationship problems
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-6" name="reason" type="checkbox" value="reason6">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-6">
-                                Domestic abuse
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-7" name="reason" type="checkbox" value="reason7">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-7">
-                                Harassment or violence in my area
-                        </label>
-                    </div>
-              
-
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
-                            Financial difficulties
-                    </h2>
-                </legend>
-           
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-8" name="reason" type="checkbox" value="reason8">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-8">
-                                Home being repossessed as can’t pay mortgage
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-9" name="reason" type="checkbox" value="reason9">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-9">
-                                Can’t afford to pay rent
-                        </label>
-                    </div>
-               
-
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
-                            Home not suitable
-                    </h2>
-                    </legend>
-           
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-10" name="reason" type="checkbox" value="reason10">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-10">
-                                Home declared Below Tolerable Standard or has a closing order
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-11" name="reason" type="checkbox" value="reason11">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-11">
-                                Medical condition made worse by my current housing
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-12" name="reason" type="checkbox" value="reason12">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-12">
-                                Problems getting around my home due to disability
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-13" name="reason" type="checkbox" value="reason13">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-13">
-                                Home is overcrowded
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-14" name="reason" type="checkbox" value="reason14">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-14">
-                                Home is too big for me
-                        </label>
-                    </div>
-                
-
-
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                        <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
-                                Personal reasons
-                        </h2>
-                    </legend>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-15" name="reason" type="checkbox" value="reason15">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-15">
-                                To be nearer family
-                        </label>
-                    </div>
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="reason-16" name="reason" type="checkbox" value="reason16">
-                        <label class="govuk-label govuk-checkboxes__label" for="reason-16">
-                                Social or cultural reasons
-                        </label>
-                    </div>
-                </div>
-
-            </fieldset>
-        </div>
-
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-            <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
-                    Other
-            </h2>
-            </legend>
+        {% from "checkboxes/macro.njk" import govukCheckboxes %}
         {% from "textarea/macro.njk" import govukTextarea %}
-
+        
+        {% set detailsHtml %}
         {{ govukTextarea({
-          name: "reason-other",
-          id: "reason-other",
+          id: "reason-details",
+          name: "reason-details",
+          classes: "govuk-!-width-two-thirds",
           label: {
             text: "Give details"
           }
         }) }}
-        
+        {% endset -%}
+
+        {{ govukCheckboxes({
+            idPrefix: "reason-conditional",
+            name: "reason",
+            fieldset: {
+              legend: {
+                text: "Why are you applying for housing?",
+                isPageHeading: true,
+                classes: "govuk-fieldset__legend--m"
+              }
+            },
+            hint: {
+              text: "Select any that apply."
+            },
+            items: [
+              {
+                value: "Homelessness or at risk of homelessness ",
+                text: "Homelessness or at risk of homelessness "
+              },
+              {
+                value: "Leaving prison",
+                text: "Leaving prison"
+              },
+              {
+                value: "Leaving hospital",
+                text: "Leaving hospital"
+              },
+              {
+                value: "Leaving HM Armed Forces",
+                text: "Leaving HM Armed Forces"
+              },
+              {
+                value: "Relationship problems",
+                text: "Relationship problems"
+              },
+              {
+                value: "Domestic abuse",
+                text: "Domestic abuse"
+              },
+              {
+                value: "Harassment or violence in my area",
+                text: "Harassment or violence in my area"
+              },
+              {
+                value: "Home being repossessed as can’t pay mortgage",
+                text: "Home being repossessed as can’t pay mortgage"
+              },
+              {
+                value: "Can’t afford to pay rent",
+                text: "Can’t afford to pay rent"
+              },
+              {
+                value: "Home declared Below Tolerable Standard or has a closing order",
+                text: "Home declared Below Tolerable Standard or has a closing order"
+              },
+              {
+                value: "Can’t afford to pay rent",
+                text: "Can’t afford to pay rent"
+              },
+              {
+                value: "Medical condition made worse by my current housing",
+                text: "Medical condition made worse by my current housing"
+              },
+              {
+                value: "Problems getting around my home due to disability",
+                text: "Problems getting around my home due to disability"
+              },
+              {
+                value: "Home is overcrowded",
+                text: "Home is overcrowded"
+              },
+              {
+                value: "Home is too big for me",
+                text: "Home is too big for me"
+              },
+              {
+                value: "To be nearer family",
+                text: "To be nearer family"
+              },
+              {
+                value: "Social or cultural reasons",
+                text: "Social or cultural reasons"
+              },
+              {
+                value: "Other",
+                text: "Other reason",
+                conditional: {
+                  html: detailsHtml
+                }
+              }
+            ]
+          }) }}
+
+
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
@@ -190,7 +133,7 @@
     <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>one wording change for homeless</li>
-    <li>need at least one checked: Select at least one reason - or need to have a text in the "Other" textbox</li>
+    <li>need at least one checked: Select at least one reason - or need to have a text in the "Give details" textbox for the Other reason option</li>
     <li>routing changed: now going to house type instead of medical question</li>    
     <li>validation: <span class="govuk-error-message">Select at least one reason for applying </span> <span class="UR-tag red">CHANGED</span></li>
 </ul>
