--- a/app/views/forms/housing/CBLadd-child2-loop.html
+++ b/app/views/forms/housing/CBLadd-child2-loop.html
@@ -131,7 +131,7 @@
 
       {{ govukInput({
         label: {
-          text: "Enter their Enter address including postcode"
+          text: "Enter their address. Including postcode if you know it."
         },
         id: "child-add2",
         name: "child-add2",
