--- a/app/views/forms/housing/CBLaddress2-loop-joint.html
+++ b/app/views/forms/housing/CBLaddress2-loop-joint.html
@@ -24,7 +24,7 @@
         {% from "input/macro.njk" import govukInput %}
         {{ govukInput({
           label: {
-            text: "Enter address including postcode"
+            text: "Enter address. Including postcode if you know it."
           },
           id: "addr2-joint",
           name: "addr2-joint",
@@ -63,9 +63,9 @@
               checked: checked ("type2-joint", "tenant")
             },
             {
-              value: "Lodger",
-              text: "Lodger",
-              checked: checked ("type2-joint", "Lodger")
+              value: "Living with parents",
+              text: "Living with parents",
+              checked: checked ("type2-joint", "Living with parents")
             },
             {
               value: "Owner",
@@ -159,9 +159,9 @@
             checked: checked("leave2-joint", "Asked or told to leave")
           },
           {
-            value: "Relationship breakdown",
-            text: "Relationship breakdown",
-            checked: checked("leave2-joint", "Relationship breakdown")
+            value: "Relationship or family breakdown",
+            text: "Relationship or family breakdown",
+            checked: checked("leave2-joint", "Relationship or family breakdown")
           },
           {
             value: "End of lease",
