--- a/app/views/forms/housing/CBLconfirmation.html
+++ b/app/views/forms/housing/CBLconfirmation.html
@@ -75,6 +75,10 @@
 <div class="alt-notes-box">
 <p><a href="/forms/housing/CBLconfirmation-email">see with an email</a> - - - <a href="/forms/housing/CBLconfirmation-post">see when we send by post</a> - - - - <a href="/forms/housing/CBLemail-text">see text of email</a></p>
 </div>
+<div class="UR-notes-box">
+    <h3 class="govuk-heading-s">UR notes:</h3>
+    <p>We need a message for them to check their spam / junk forlder</p>
+</div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <p><strong>could we have a pdf or something the user can print or download?</strong></p>
@@ -82,6 +86,7 @@
     <p>Housing doesn't want a reference number here, they have their own reference number</p>
     <p>might to say they will receive information via MAIL</p>
 </div>
+
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">Email text to send</span></h3>
   <ul class="govuk-list">
