--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -74,5 +74,6 @@
     <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
    <p><strong>content has changed</strong></p>
    <p>validation will be needed: <span class="govuk-error-message">Confirm if joint applicant</span> if yes, textbox can't be empty - <span class="govuk-error-message">Enter name</span>  </p>
+   <p>WARNING: You only see this screen if the user didn't say they live alone!</p>
 </div>
 {% endblock %}
