--- a/app/views/forms/housing/CBLother-properties.html
+++ b/app/views/forms/housing/CBLother-properties.html
@@ -22,7 +22,7 @@
   name: "properties-details",
   classes: "govuk-!-width-two-thirds",
   label: {
-    text: "Enter address including postcode"
+    text: "Enter address. Including postcode if you know it."
   }
 }) }}
 {% endset -%}
