--- a/app/views/forms/housing/CBLsummary-aboutyou.html
+++ b/app/views/forms/housing/CBLsummary-aboutyou.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag ok">ok</span>
+            Apply online for council housing<span class="UR-tag red">CHANGED for email</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <h2 class="govuk-heading-m">
@@ -22,7 +22,6 @@
               <tbody class="govuk-table__body">
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Name:</th><td class="govuk-table__cell no-border">{{data['title-applicant']}}&nbsp;{{ data['first-name-applicant']}}&nbsp;{{data['last-name-applicant']}}</td></tr>
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Phone:</th><td class="govuk-table__cell no-border">{{ data ['telephone-number']}}</td></tr>
-                <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Email (optional):</th><td class="govuk-table__cell no-border">{{data['email']}}</td></tr>
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Address:</th><td class="govuk-table__cell no-border">{{ data['postcode']}}</td></tr>
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Preferred contact:</th><td class="govuk-table__cell no-border">{{ data['how-contacted']}}</td></tr>
                 {% if data['how-contacted'] === 'I have an advocate or power of attorney' %}
@@ -30,6 +29,9 @@
                 {% endif %}
                 {% if data['how-contacted'] === 'Post at a different address' %}
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Other address:</th><td class="govuk-table__cell no-border">{{ data['other-add']}}</td></tr>
+                {% endif %}
+                {% if data['how-contacted'] === 'email' %}
+                <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Email:</th><td class="govuk-table__cell no-border">{{ data['emailadd']}}</td></tr>
                 {% endif %}
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date of birth:</th><td class="ngovuk-table__cell o-border">{{ data['dob-applicant-day'] }}/{{ data ['dob-applicant-month'] }}/{{ data['dob-applicant-year'] }}</td></tr>
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender-applicant'] === 'Other' %} {{data['gender-desc']}} {% else %} {{data['gender-applicant']}} {% endif %}</td></tr>
@@ -60,6 +62,7 @@
       <li>Edit details takes you back to the page "about you" with name , phone and email</li>
       <li>gender: display Female, or Male or Other, if description of gender is provided then display it INSTEAD of Other</li>
       <li>the title is now added and will be at the start of the name for example: <strong>Name : Mr Bob Test</strong></li>
+      <li>if email was preferred, it needs to be displayed, same if other address, or power of attorney</li>
     </ul>
 </div>
 
