--- a/app/views/forms/housing/CBLwho-moving.html
+++ b/app/views/forms/housing/CBLwho-moving.html
@@ -32,7 +32,7 @@
           name: "people-details",
           value: data['people-details'],
           label: {
-            text: "Give details of anyone not moving with you. Tell us their name, date of birth and relationship to you."
+            text: "Give details of anyone not moving with you. Tell us their name, date of birth if you know it and relationship to you."
           }
         }) }}
         {% endset %}
