make simple version for link to share

--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -181,21 +181,21 @@ font-family: nta;
 }
 .UR-tag.ok {
     background-color: #518418;
-    //display: none
+    display: none
 }
 .UR-tag.amber {
     background-color: orange;
     color: black;
-    //display: none
+    display: none
 }
 .UR-tag.red {
     background-color: #b30000;
-    //display: none
+    display: none
 }
 .UR-tag.no {
     background-color: #cccccc;
     color: black;
-   // display: none
+    display: none
 }
 
 
@@ -224,7 +224,7 @@ font-family: nta;
     p, h3, li {
         color: #a94442;
     }
-    // display: none
+    display: none
 }
 .IT-notes-box{
     border: solid 1px #bcdff1;
@@ -236,7 +236,7 @@ font-family: nta;
     p, h3, li {
         color: #31708f;
     }
-    // display: none
+     display: none
 }
 .content-notes-box{
     border: solid 1px#faf2cc;
@@ -248,7 +248,7 @@ font-family: nta;
     p, h3, li {
         color: #8a6d3b;
     }
-    // display: none
+     display: none
 }
 .UR-notes-box{
     border: solid 1px#d0e9c6;
@@ -260,7 +260,7 @@ font-family: nta;
     p, h3, li {
         color: #3c763d;
     }
-    // display: none
+     display: none
 }
 .alt-notes-box{
     border: solid 1px #dddddd;
@@ -272,7 +272,7 @@ font-family: nta;
     p, h3, li, a {
         color: #dddddd;
     }
-    // display: none
+     display: none
 }
 
 // -------------------------------------------- CBL------------------------------------------------- //
