--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,23 +2,39 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Forms
+  GOV.UK Prototype Kit
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Choice base letting form
-      </h1>
-      <p>This form is not the final version but this is close enough</p>
+        ERC prototype using the GOV.UK Prototype Kit
+        <span class="govuk-caption-l">{{releaseVersion}}</span>
+      </h1>{{releaseVersion | log }}
+      <p>
+        This kit lets you rapidly create HTML prototypes using GDS principles.
+      </p>
 
+      <h2 class="govuk-heading-m">About this page</h2>
+      <p>We recommend you add links to your prototype to this page, rather than delete it.
+        You'll find this page in the kit at '/app/views/index.html'.</p>
 
-      <p><a href="forms/housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">See the form</a></p>
+      <p>You can change the service name by editing the file '/app/config.js'.</p>
 
+      <p><a href="home.html">Go to homepage of ERC prototype</a></p>
 
+      <h2 class="govuk-heading-m">Examples and documentation</h2>
 
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/docs/tutorials-and-examples">Example pages and documentation</a></li>
+        <li>
+          <a href="https://design-system.service.gov.uk">
+            GOV.UK Design System
+          </a>
+        </li>
+      </ul>
     </div>
 </div>
 
