more change after testing

--- a/app/views/forms/housing/CBL5yearsadd-joint.html
+++ b/app/views/forms/housing/CBL5yearsadd-joint.html
@@ -11,7 +11,7 @@
             Apply online for council housing 
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-        <p class="govuk-body-l">Enter the addresses your joint applicant lived at for the past 5 years. Start with the one they are living in at the moment.</p>
+        <p class="govuk-body-l">Enter the UK addresses your joint applicant lived at for the past 5 years. Start with the one they are living in at the moment.</p>
         <h2 class="govuk-heading-m">
             Address 1:
         </h2>
