--- a/app/views/forms/housing/CBL5yearsadd-question.html
+++ b/app/views/forms/housing/CBL5yearsadd-question.html
@@ -11,7 +11,7 @@
             Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-        <p class="govuk-body-l">We need to know about all the addresses you lived at for the last 5 years.</p>
+        <p class="govuk-body-l">We need to know about all the UK addresses you lived at for the last 5 years.</p>
         
         <form class="form" method="post">
      
