--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -11,7 +11,7 @@
             Apply online for council housing <span class="UR-tag red">CHANGED</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-        <p class="govuk-body-l">Tell us the addresses you’ve lived at for the past 5 years. </p>
+        <p class="govuk-body-l">Tell us the UK addresses you’ve lived at for the past 5 years. </p>
         <h2 class="govuk-heading-m">
             Address 1:
         </h2>
