--- a/app/views/forms/housing/CBLconfirmation-email.html
+++ b/app/views/forms/housing/CBLconfirmation-email.html
@@ -19,7 +19,8 @@
                 Application submitted
             </h1>
             <div class="govuk-panel__body">
-                We’ll send you confirmation of this by email to  <strong>applicant.email@gmail.com</strong>
+                We’ll send you confirmation of this by email to  <strong>applicant.email@gmail.com</strong><br><br>
+                If you don’t get a confirmation email check your spam or junk folder.
             </div>
           </div>
           <p>Thank you for submitting your housing registration form.</p>
