--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -15,16 +15,11 @@
         <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="area-hint">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                <h2 class="govuk-fieldset__heading">
+                <h2 class="govuk-fieldset__heading govuk-!-margin-bottom-5">
                     Which areas do you want to live in?
                 </h2>
                 </legend>
-                <span id="area-hint" class="govuk-hint ">
-                    Your choices here won’t affect what areas you can bid for later. 
-                </span>
-                <span id="area-hint" class="govuk-hint govuk-!-margin-bottom-8">
-                    We use these choices to match you with available houses from other housing providers. 
-                </span>
+
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                     <h2 class="govuk-fieldset__heading">
                             Barrhead South
@@ -202,7 +197,7 @@
     <ul class="govuk-list govuk-list--bullet">
     <li> Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
     <li>Select at least one</li>
-    <li>Guidance added at the top</li>
+    <li>Guidance moved to the previous page</li>
     <li>validation: <span class="govuk-error-message">Select at least one area</span></li>
     </ul>
 </div>
