--- a/app/views/forms/housing/CBLhouse-type.html
+++ b/app/views/forms/housing/CBLhouse-type.html
@@ -103,7 +103,7 @@
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
-          href: "/forms/housing/CBLareas.html"
+          href: "/forms/housing/CBLareas-info.html"
         }) }}
       
 
